  do some special stuff.
- Added additional styling to both skins to prevent interference with
  the css styles of the host.
- Change: Cleaned up rendering process.
- Bugfix: Removed the jQuery library. ReqireJS should now work normally
  when used on the frontend.
- Bugfix: Generated sourcecode now works with IteratorAggregate when
  trying to access a single element from the iterator.

1.3.6
- Added scope analysis. Protected an private variables are treated
  as public in case they are reachable with the called scope.
- Class properties are now sorted alphabetically.
- Change: Replaced the option analysePublicMethods with
  analyseMethodsAtall. The old option does not really make sense
  anymore, since we introduced the scope analysis.
- Change: Improved the automatic code generation for recursions.
- Change: Standard value for 'backtraceAnalysis' is now 'deep'.
- Bugfix: Added the "$" in front of static properties.
- Bugfix: Automatic selection of the generated source code now works
  correct.
- Bugfix: Code generation now works in IE and Edge.
- Bugfix: Several JS fixes for IE9.

1.3.5
- Added code analysis to determine the name of the variable we are
  analysing.
- Added warning to tell the user that we are not starting an other
  analysis, because we will reach output => maxCall.
- Bugfix: Recursion clicking does not produce double ids anymore.

1.3.4
- Added closure analysis.
- Bugfix: Hans skin tries to close some left-over html tag to get a
  proper display
- Change: Removed the jQuery setting
- Bugfix: The display of the settings in the footer does do a
  callable analysis anymore, which may be a little bit confusing.
- Bugfix: Fixed a small display issue with the search in the Hans
  skin
- Bugfix: The Collapse-Everything-Else function from the hans skin
  does not affect other debug output anymore.

1.3.3
- kreXX will now work without a writable chunks folder, but this will
  require a much more memory.